--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>WELCOME</h1>
-    <h1 id="sf">My <span class="color">WEBSITE</span></h1>
+    <section>
+        <div id="der" class="half-width">
+            <h1>WELCOME</h1>
+            <h1 id="sf">My <span class="color">WEBSITE</span></h1>
+            <h4 id="ab">About me</h4>
+            <p id="textcolor"><b>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </br> Lorem Ipsum has been the industry's standard dummy text ever since the </br>1500s,  when an unknown printer took a galley</b></p>
+        </div>
+        <div class="half-width">
+            <img  src="images/pofile.png" alt="">
+        </div>
+    </section>
 </body>
 </html>
