--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="top-banner">
         <div id="der" class="half-width">
             <h1>WELCOME</h1>
             <h1 id="sf">My <span class="color">WEBSITE</span></h1>
             <h4 id="ab">About me</h4>
             <p id="textcolor"><b>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </br> Lorem Ipsum has been the industry's standard dummy text ever since the </br>1500s,  when an unknown printer took a galley</b></p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/jahirul-alam-908b771a1/">HIRE ME</a>
         </div>
         <div class="half-width">
             <img  src="images/pofile.png" alt="">
